hard-gists/5780124/run.log
=== Docker Run Log for 5780124 ===
Started at: Mi 29. Okt 15:57:28 CET 2025

[2025-10-29 15:57:29] START: Running container for 5780124
[2025-10-29 15:57:29] SUCCESS: Container fcbfcb2a26ae9b04d9c25bba06df4f0315730228f0cef0d864d2708d05c3b4fd started for 5780124
=== Container logs for 5780124 ===
  File "/snippet.py", line 39
    print "Waiting write_queue to write all data"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5780124 ===
[2025-10-29 15:57:31] INFO: Container fcbfcb2a26ae9b04d9c25bba06df4f0315730228f0cef0d864d2708d05c3b4fd has stopped
